[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/inventory/Inventory.gd" type="Script" id=1]
[ext_resource path="res://scenes/maingame/worlds/FlowField.gd" type="Script" id=2]
[ext_resource path="res://assets/themes/PanelStyle.tres" type="StyleBox" id=3]
[ext_resource path="res://scenes/ui/InventoryPointer.tscn" type="PackedScene" id=9]

[node name="Inventory" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
script = ExtResource( 1 )
flowField = NodePath("FlowField")
cursor = NodePath("VBoxContainer/InventoryUI/ItemAddCenter/ItemAddControl/InventoryPointer")
ui = NodePath("VBoxContainer/InventoryUI")

[node name="FlowField" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 12.0
margin_top = 12.0
margin_right = 788.0
margin_bottom = 488.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 776.0
margin_bottom = 14.0
text = "Items"
align = 1
valign = 1

[node name="Panel" type="Panel" parent="VBoxContainer/Label"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = ExtResource( 3 )

[node name="InventoryUI" type="MarginContainer" parent="VBoxContainer"]
show_behind_parent = true
margin_top = 26.0
margin_right = 776.0
margin_bottom = 476.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ItemAddCenter" type="CenterContainer" parent="VBoxContainer/InventoryUI"]
margin_right = 776.0
margin_bottom = 450.0

[node name="ItemAddControl" type="Control" parent="VBoxContainer/InventoryUI/ItemAddCenter"]
margin_left = 388.0
margin_top = 225.0
margin_right = 388.0
margin_bottom = 225.0

[node name="InventoryPointer" parent="VBoxContainer/InventoryUI/ItemAddCenter/ItemAddControl" instance=ExtResource( 9 )]
z_index = 10
z_as_relative = false

[node name="ItemAddNode" type="Node2D" parent="VBoxContainer/InventoryUI/ItemAddCenter/ItemAddControl"]

[node name="Panel" type="Panel" parent="VBoxContainer/InventoryUI"]
show_behind_parent = true
margin_right = 776.0
margin_bottom = 450.0
custom_styles/panel = ExtResource( 3 )

[connection signal="resized" from="." to="." method="_on_Inventory_resized"]
